// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render align 1`] = `
<div
  className="cf-12to336"
>
  Hello
</div>
`;

exports[`should render case 1`] = `
<div
  className="cf-56txr3"
>
  Hello
</div>
`;

exports[`should render size 1`] = `
<div
  className="cf-14kf5yt"
>
  Hello
</div>
`;

exports[`should render type 1`] = `
<div
  className="cf-1lbcix5"
>
  Hello
</div>
`;
